[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autourgos-summary-memory"
version = "1.0.1"
description = "LLM-compressed rolling summary memory for Autourgos agents — SummaryBufferedMemory."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jitin Kumar Sengar", email = "devxjitin@gmail.com"}
]
keywords = ["autourgos", "agent", "memory", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/devxjitin/autourgos-summary-memory"
Repository = "https://github.com/devxjitin/autourgos-summary-memory"
Issues = "https://github.com/devxjitin/autourgos-summary-memory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autourgos_summary_memory*"]

[tool.setuptools.package-data]
autourgos_summary_memory = ["py.typed"]
